fix font icons not showing up ...again

--- a/_assets/stylesheets/main/settings/_typography.scss
+++ b/_assets/stylesheets/main/settings/_typography.scss
@@ -7,12 +7,12 @@ $base-line-height-ratio: $base-line-height / $base-font-size;
 
 @font-face {
   font-family: "FontAwesome";
-  src: url(font_path("fontawesome-webfont.eot"));
-  src: url(font_path("fontawesome-webfont.eot?#iefix")) format("embedded-opentype"),
-       url(font_path("fontawesome-webfont.woff2")) format("woff2"),
-       url(font_path("fontawesome-webfont.woff")) format("woff"),
-       url(font_path("fontawesome-webfont.ttf")) format("truetype"),
-       url(font_path("fontawesome-webfont.svg#fontawesome")) format("svg");
+  src: asset-url("fontawesome-webfont.eot");
+  src: asset-url("fontawesome-webfont.eot?#iefix") format("embedded-opentype"),
+       asset-url("fontawesome-webfont.woff2") format("woff2"),
+       asset-url("fontawesome-webfont.woff") format("woff"),
+       asset-url("fontawesome-webfont.ttf") format("truetype"),
+       asset-url("fontawesome-webfont.svg#fontawesome") format("svg");
   font-weight: normal;
   font-style: normal;
 }
